--- a/src/interface_service/Taskfile.yml
+++ b/src/interface_service/Taskfile.yml
@@ -3,29 +3,30 @@ version: '3'
 vars:
   INTERFACE_SERVICE_BUILDER_IMAGE: remla-stackoverflow-tagger/interface-service-builder
   INTERFACE_SERVICE_IMAGE: remla-stackoverflow-tagger/interface-service
-  PYTHON_BIN: python
-  PATH: interface_service
-  ENV: interface_venv
+  INTERFACE_SERVICE_VENV: interface_service/interface_venv
+
+env:
+  DOCKER_BUILDKIT: 1
 
 tasks:
   create_venv:
     preconditions:
       - sh: 'python -c "import sys; assert sys.version_info.major == 3 and 6 <= sys.version_info.minor <= 9"'
         msg: 'Requires Python version >=3.6 and <=3.9'
-    status: ["test -d {{.VENV}}"]
-    cmds: ["python -m venv {{.VENV}}"]
+    status: ["test -d {{.INTERFACE_SERVICE_VENV}}"]
+    cmds: ["python -m venv {{.INTERFACE_SERVICE_VENV}}"]
   prepare:
     deps: [create_venv]
     cmds:
-      - "{{.VENV}}/bin/pip install --upgrade pip wheel"
-      - "{{.VENV}}/bin/pip install -r requirements.txt"
-  clean: "rm -rf {{.VENV}}"
-  lint: "pylint --rcfile=.pylintrc src/"
-  test: "pytest -n auto"
+      - "{{.INTERFACE_SERVICE_VENV}}/bin/pip install --upgrade pip wheel"
+      - "{{.INTERFACE_SERVICE_VENV}}/bin/pip install -r interface_service/requirements.txt"
+  clean: "rm -rf {{.INTERFACE_SERVICE_VENV}}"
+  lint: "pylint --rcfile=.pylintrc interface_service/src/"
+  test: "pytest -n auto interface_service"
   build_builder:
-    cmds: [ "docker build --target builder -t {{.INTERFACE_SERVICE_BUILDER_IMAGE}} ." ]
+    cmds: [ "docker build --target builder -f interface_service/Dockerfile -t {{.INTERFACE_SERVICE_BUILDER_IMAGE}} ." ]
   build_docker:
-    cmds: [ "docker build --target final -t {{.INTERFACE_SERVICE_IMAGE}} ." ]
+    cmds: [ "docker build --target final -f interface_service/Dockerfile -t {{.INTERFACE_SERVICE_IMAGE}} ." ]
   docker_run:
     deps: [ build_builder ]
     interactive: true
@@ -40,6 +41,6 @@ tasks:
         --network host
         --user {{.UID}}:{{.GID}}
         --workdir /project
-        --volume {{.PROJECT_ROOT}}/interface_service:/project
+        --volume {{.PROJECT_ROOT}}/src:/project
         {{.INTERFACE_SERVICE_BUILDER_IMAGE}}
         {{.CLI_ARGS}}
