--- a/src/learning_service/Taskfile.yml
+++ b/src/learning_service/Taskfile.yml
@@ -3,29 +3,31 @@ version: '3'
 vars:
   LEARNING_SERVICE_BUILDER_IMAGE: remla-stackoverflow-tagger/learning-service-builder
   LEARNING_SERVICE_IMAGE: remla-stackoverflow-tagger/learning-service
-  PATH: learning_service
-  VENV: learning_venv
+  LEARNING_SERVICE_VENV: learning_service/learning_venv
+
+env:
+  DOCKER_BUILDKIT: 1
 
 tasks:
   create_venv:
     preconditions:
       - sh: 'python -c "import sys; assert sys.version_info.major == 3 and 8 <= sys.version_info.minor <= 9"'
         msg: 'Requires Python version >=3.8 and <=3.9'
-    status: ["test -d {{.VENV}}"]
-    cmds: ["python -m venv {{.VENV}}"]
+    status: ["test -d {{.LEARNING_SERVICE_VENV}}"]
+    cmds: ["python -m venv {{.LEARNING_SERVICE_VENV}}"]
   prepare:
     deps: [create_venv]
     cmds:
-      - "{{.VENV}}/bin/pip install --upgrade pip wheel"
-      - "{{.VENV}}/bin/pip install -r requirements.txt"
-  clean: "rm -rf {{.VENV}}"
-  lint: "pylint --rcfile=.pylintrc src/"
-  test: "pytest -n auto"
-  mllint: "mllint --output report.md"
+      - "{{.LEARNING_SERVICE_VENV}}/bin/pip install --upgrade pip wheel"
+      - "{{.LEARNING_SERVICE_VENV}}/bin/pip install -r requirements.txt"
+  clean: "rm -rf {{.LEARNING_SERVICE_VENV}}"
+  lint: "pylint --rcfile=.pylintrc learning_service/src/"
+  test: "pytest -n auto learning_service"
+  mllint: "mllint learning_service"
   build_builder:
-    cmds: [ "docker build --target builder -t {{.LEARNING_SERVICE_BUILDER_IMAGE}} ." ]
+    cmds: [ "docker build --target builder -f learning_service/Dockerfile -t {{.LEARNING_SERVICE_BUILDER_IMAGE}} ." ]
   build_docker:
-    cmds: [ "docker build --target final -t {{.LEARNING_SERVICE_IMAGE}} ." ]
+    cmds: [ "docker build --target final -f learning_service/Dockerfile -t {{.LEARNING_SERVICE_IMAGE}} ." ]
   docker_run:
     deps: [ build_builder ]
     interactive: true
@@ -40,6 +42,6 @@ tasks:
         --network host
         --user {{.UID}}:{{.GID}}
         --workdir /project
-        --volume {{.PROJECT_ROOT}}/learning_service:/project
+        --volume {{.PROJECT_ROOT}}/src:/project
         {{.LEARNING_SERVICE_BUILDER_IMAGE}}
         {{.CLI_ARGS}}
