--- a/src/learning_service/Dockerfile
+++ b/src/learning_service/Dockerfile
@@ -28,8 +28,7 @@ RUN pip install --upgrade pip wheel \
 # mllint tries to make its file executable - can't do this unless it's root or owns the file\
 RUN chown -R appuser: /usr/local/lib/python3.8/site-packages/mllint
 
-# TODO: Replace with actual application startup
-CMD ["bash"]
+CMD ["python", "-m", "learning_service.main"]
 
 FROM common AS final
 
@@ -44,5 +43,4 @@ USER appuser
 COPY common .
 COPY learning_service .
 
-# TODO: Replace with actual application startup
-CMD ["bash"]
+CMD ["python", "-m", "learning_service.main"]
