--- a/src/learning_service/configs/settings.yaml
+++ b/src/learning_service/configs/settings.yaml
@@ -1,8 +1,8 @@
 development:
   name: development
-  DATA_DIR: data
-  DATASET_FOR_TRAINING_DIR: src/dataset
-  OUTPUT_DIR: src/output
+  DATA_DIR: learning_service/data
+  DATASET_FOR_TRAINING_DIR: learning_service/dataset
+  OUTPUT_DIR: learning_service/output
   OBJECT_STORAGE_ENDPOINT: localhost:9000
   OBJECT_STORAGE_ACCESS_KEY: root
   OBJECT_STORAGE_SECRET_KEY: remla2022
