Fixed module imports for the interface service, added test workflow for GHA

--- a/src/interface_service/Taskfile.yml
+++ b/src/interface_service/Taskfile.yml
@@ -21,7 +21,7 @@ tasks:
       - "{{.INTERFACE_SERVICE_VENV}}/bin/pip install --upgrade pip wheel"
       - "{{.INTERFACE_SERVICE_VENV}}/bin/pip install -r interface_service/requirements.txt"
   clean: "rm -rf {{.INTERFACE_SERVICE_VENV}}"
-  lint: "pylint --rcfile=interface_service/.pylintrc interface_service/src/"
+  lint: "pylint --rcfile=interface_service/.pylintrc interface_service"
   test: "pytest -n auto interface_service"
   build_builder:
     cmds: [ "docker build --target builder -f interface_service/Dockerfile -t {{.INTERFACE_SERVICE_BUILDER_IMAGE}} ." ]
