--- a/src/learning_service/Taskfile.yml
+++ b/src/learning_service/Taskfile.yml
@@ -21,7 +21,7 @@ tasks:
       - "{{.LEARNING_SERVICE_VENV}}/bin/pip install --upgrade pip wheel"
       - "{{.LEARNING_SERVICE_VENV}}/bin/pip install -r requirements.txt"
   clean: "rm -rf {{.LEARNING_SERVICE_VENV}}"
-  lint: "pylint --rcfile=learning_service/.pylintrc learning_service/src/"
+  lint: "pylint --rcfile=learning_service/.pylintrc learning_service"
   test: "pytest -n auto learning_service"
   mllint: "mllint learning_service"
   build_builder:
