--- a/src/learning_service/requirements.txt
+++ b/src/learning_service/requirements.txt
@@ -97,6 +97,7 @@ pluggy==1.0.0
 prompt-toolkit==3.0.29
 proto-plus==1.20.5
 protobuf==3.19.4
+prometheus-client==0.14.1
 psutil==5.9.1
 py==1.11.0
 py-cpuinfo==8.0.0
