--- a/learning_service/requirements.txt
+++ b/learning_service/requirements.txt
@@ -127,3 +127,5 @@ tensorflow-data-validation==1.8.0
 tensorflow-data-validation[visualization]
 dynaconf==3.1.9
 jinja2==3.1.2
+fastapi==0.78.0
+uvicorn==0.17.6
