--- a/learning_service/src/configs/settings.yaml
+++ b/learning_service/src/configs/settings.yaml
@@ -10,3 +10,8 @@ development:
   BUCKET_NAME: stackoverflow-tagger
   MODEL_OBJECT_KEY: filename
   MODEL_LOCAL_PATH: filename
+  PUBSUB_EMULATOR_HOST: localhost:8085
+  PUBSUB_PROJECT_ID: testlocal-123
+  PUBSUB_DATA_TOPIC_ID: new-data
+  PUBSUB_MODEL_TOPIC_ID: new-model
+  PUBSUB_SUBSCRIPTION_ID: learning-service-new-model
