Replaced Google-managed Prometheus with self-deployed instance

--- a/terraform/Taskfile.yml
+++ b/terraform/Taskfile.yml
@@ -10,6 +10,7 @@ vars:
     roles/editor
     roles/iam.roleAdmin
     roles/resourcemanager.projectIamAdmin
+    roles/container.admin
   TERRAFORM_SERVICE_ACCOUNT_CREDENTIALS_FILE: terraform-credentials.json
   TERRAFORM_STATE_BUCKET: '{{.PROJECT_ID}}-terraform'
   TERRAFORM_STATE_BUCKET_URL: 'gs://{{.TERRAFORM_STATE_BUCKET}}'
