--- a/terraform/modules/helm-stackoverflow-tagger/templates/values.yml
+++ b/terraform/modules/helm-stackoverflow-tagger/templates/values.yml
@@ -6,11 +6,21 @@ ingress:
   hosts:
     - ${HOSTNAME}
 
+learningService:
+  podAnnotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9010"
+    prometheus.io/path: "/"
+
 interfaceService:
   replicaCount: ${INTERFACE_SERVICE_REPLICA_COUNT}
   service:
     # Required for GKE Ingress
     type: NodePort
+  podAnnotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "9000"
+    prometheus.io/path: "/"
 
 frontend:
   replicaCount: ${FRONTEND_REPLICA_COUNT}
