--- a/dev/docker-compose.yml
+++ b/dev/docker-compose.yml
@@ -10,13 +10,15 @@ services:
   minio:
     image: minio/minio:RELEASE.2022-05-08T23-50-31Z
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "10000:10000"
+      - "10001:10001"
     command:
       - "server"
       - "/data"
+      - "--address"
+      - ":10000"
       - "--console-address"
-      - ":9001"
+      - ":10001"
     volumes:
       - "minio-data:/data"
     environment:
