--- a/terraform/modules/helm-stackoverflow-tagger/templates/values.yml
+++ b/terraform/modules/helm-stackoverflow-tagger/templates/values.yml
@@ -10,7 +10,7 @@ learningService:
   podAnnotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "9010"
-    prometheus.io/path: "/"
+    prometheus.io/path: "/metrics"
 
 interfaceService:
   replicaCount: ${INTERFACE_SERVICE_REPLICA_COUNT}
@@ -20,7 +20,7 @@ interfaceService:
   podAnnotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "9000"
-    prometheus.io/path: "/"
+    prometheus.io/path: "/metrics"
 
 frontend:
   replicaCount: ${FRONTEND_REPLICA_COUNT}
