--- a/src/learning_service/Dockerfile
+++ b/src/learning_service/Dockerfile
@@ -38,6 +38,8 @@ COPY learning_service/requirements.txt .
 RUN pip install --upgrade pip wheel --no-cache-dir \
     && pip install -r requirements.txt --no-cache-dir
 
+ENV REMLA_ENV deployment
+
 WORKDIR /app
 USER appuser
 
