--- a/helm/stackoverflow-tagger/templates/learning-service/statefulset.yaml
+++ b/helm/stackoverflow-tagger/templates/learning-service/statefulset.yaml
@@ -36,28 +36,41 @@ spec:
       serviceAccountName: {{ include "stackoverflow-tagger.learningService.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.learningService.podSecurityContext | nindent 8 }}
+      volumes:
+        - name: gcloud-service-account
+          secret:
+            secretName: {{ .Values.config.gcloud.serviceAccountKeySecret | quote }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.learningService.securityContext | nindent 12 }}
           image: "{{ .Values.learningService.image.repository }}:{{ .Values.learningService.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.learningService.image.pullPolicy }}
+          env:
+            - name: GOOGLE_APPLICATION_CREDENTIALS
+              value: /app/gcloud_sa/{{ .Values.config.gcloud.serviceAccountKeySecretKey }}
           volumeMounts:
             - name: cache
               mountPath: /app/cache
+            - name: gcloud-service-account
+              mountPath: /app/gcloud_sa
           ports:
             - name: metrics
               containerPort: 9010
               protocol: TCP
-          # TODO: Expose endpoints for liveness and readiness checking (might be done alongside Prometheus metrics)
-          #livenessProbe:
-          #  httpGet:
-          #    path: /
-          #    port: http
-          #readinessProbe:
-          #  httpGet:
-          #    path: /
-          #    port: http
+          livenessProbe:
+            httpGet:
+              path: /api/ping
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /api/ping
+              port: http
+          envFrom:
+            - secretRef:
+                name: {{ include "stackoverflow-tagger.learningService.fullname" . }}
+            - configMapRef:
+                name: {{ include "stackoverflow-tagger.learningService.fullname" . }}
           resources:
             {{- toYaml .Values.learningService.resources | nindent 12 }}
       {{- with .Values.learningService.nodeSelector }}
