--- a/helm/stackoverflow-tagger/templates/interface-service/deployment.yaml
+++ b/helm/stackoverflow-tagger/templates/interface-service/deployment.yaml
@@ -47,6 +47,9 @@ spec:
             - name: http
               containerPort: 8000
               protocol: TCP
+            - name: metrics
+              containerPort: 9000
+              protocol: TCP
           livenessProbe:
             httpGet:
               path: /api/ping
