--- a/src/interface_service/configs/settings.yaml
+++ b/src/interface_service/configs/settings.yaml
@@ -5,8 +5,8 @@ development:
   OBJECT_STORAGE_SECRET_KEY: remla2022
   OBJECT_STORAGE_TLS: false
   BUCKET_NAME: stackoverflow-tagger
-  MODEL_OBJECT_KEY: filename
-  MODEL_LOCAL_PATH: filename
+  MODEL_OBJECT_KEY: model.joblib
+  MODEL_LOCAL_PATH: ./interface_service/model.joblib
   PUBSUB_EMULATOR_HOST: localhost:8085
   PUBSUB_PROJECT_ID: testlocal-123
   PUBSUB_DATA_TOPIC_ID: new-data
