--- a/src/learning_service/configs/settings.yaml
+++ b/src/learning_service/configs/settings.yaml
@@ -8,7 +8,7 @@ development:
   OBJECT_STORAGE_SECRET_KEY: remla2022
   OBJECT_STORAGE_TLS: false
   BUCKET_NAME: stackoverflow-tagger
-  MODEL_OBJECT_KEY: filename
+  MODEL_OBJECT_KEY: model.joblib
   MODEL_LOCAL_PATH: filename
   PUBSUB_EMULATOR_HOST: localhost:8085
   PUBSUB_PROJECT_ID: testlocal-123
