--- a/src/interface_service/locust.conf
+++ b/src/interface_service/locust.conf
@@ -1,11 +1,6 @@
-locustfile = ./test/e2e/locustfile.py
-autostart = true
-autoquit = 5
-html = ./report.html
+locustfile = ./interface_service/e2e/locustfile.py
 host = http://localhost:8000/
 web-host = localhost
 web-port = 11000
 users = 100
 spawn-rate = 10
-run-time = 30s
-print-stats = true
