--- a/src/interface_service/Taskfile.yml
+++ b/src/interface_service/Taskfile.yml
@@ -20,9 +20,12 @@ tasks:
     cmds:
       - "{{.INTERFACE_SERVICE_VENV}}/bin/pip install --upgrade pip wheel"
       - "{{.INTERFACE_SERVICE_VENV}}/bin/pip install -r interface_service/requirements.txt"
-  clean: "rm -rf {{.INTERFACE_SERVICE_VENV}}"
+  clean:
+    - "rm -rf {{.INTERFACE_SERVICE_VENV}}"
+    - "rm interface_service/model.joblib"
   lint: "pylint --rcfile=interface_service/.pylintrc interface_service"
   test: "pytest -n auto interface_service"
+  locust: "locust --config=interface_service/locust.conf"
   build_builder:
     cmds: [ "docker build --target builder -f interface_service/Dockerfile -t {{.INTERFACE_SERVICE_BUILDER_IMAGE}} ." ]
   build_docker:
