--- a/src/interface_service/requirements.txt
+++ b/src/interface_service/requirements.txt
@@ -9,4 +9,8 @@ dynaconf==3.1.9
 jinja2==3.1.2
 minio==7.1.8
 google-cloud-pubsub==2.13.0
+joblib==0.14.1
+scikit-learn==1.0.2
 prometheus-client==0.14.1
+locust==2.9.0
+pandas==1.3.5
