--- a/src/learning_service/requirements.txt
+++ b/src/learning_service/requirements.txt
@@ -4,7 +4,7 @@ pandas==1.3.5
 nltk==3.7
 scipy==1.8.1
 matplotlib==3.5.2
-scikit-learn==0.24.1
+scikit-learn==1.0.1
 codecarbon==2.1.2
 dslinter==2.0.8
 dulwich==0.20.42
@@ -119,3 +119,4 @@ tensorflow-data-validation==1.8.0
 jinja2==3.1.2
 fastapi==0.78.0
 uvicorn==0.17.6
+minio==7.1.8
