--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -15,6 +15,9 @@ inputs:
     description: 'Name of the Docker image with Terraform builder'
     required: false
     default: terraform-builder
+  chart_version:
+    description: 'Version of Helm Chart to deploy'
+    required: true
 
 runs:
   using: composite
