--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master ]
   push:
     branches: [ master ]
+    tags: [ 'v*.*.*' ]
 
 env:
   IMAGE_NAME_BASE: ghcr.io/${{ github.repository }}
