Removed async executions from FastAPI to allow for the thread pool to handle connections.
Fixed endpoint for GCS for production environment.

--- a/terraform/modules/helm-stackoverflow-tagger/templates/values.yml
+++ b/terraform/modules/helm-stackoverflow-tagger/templates/values.yml
@@ -40,7 +40,7 @@ config:
     dataSubscriptionId: "new-data"
     newModelSubscriptionId: "new-model"
   objectStorage:
-    endpoint: "https://storage.googleapis.com"
+    endpoint: "storage.googleapis.com"
     accessKey: ${DATA_MODEL_BUCKET_ACCESS_KEY}
     secretKey: ${DATA_MODEL_BUCKET_SECRET_KEY}
     tls: true
