--- a/helm/stackoverflow-tagger/templates/learning-service/statefulset.yaml
+++ b/helm/stackoverflow-tagger/templates/learning-service/statefulset.yaml
@@ -12,7 +12,7 @@ spec:
       {{- include "stackoverflow-tagger.learningService.selectorLabels" . | nindent 6 }}
   volumeClaimTemplates:
     - metadata:
-        name: cache
+        name: data
       spec:
         accessModes:
           - ReadWriteOnce
@@ -50,8 +50,8 @@ spec:
             - name: GOOGLE_APPLICATION_CREDENTIALS
               value: /app/gcloud_sa/{{ .Values.config.gcloud.serviceAccountKeySecretKey }}
           volumeMounts:
-            - name: cache
-              mountPath: /app/cache
+            - name: data
+              mountPath: /app/data
             - name: gcloud-service-account
               mountPath: /app/gcloud_sa
           ports:
