--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - name: Login to image registry
         uses: docker/login-action@v2
-        if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request' && github.ref_type == 'tag'
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -31,7 +31,7 @@ jobs:
           context: ./src
           file: ./src/learning_service/Dockerfile
           image: ${{ env.IMAGE_NAME_BASE }}/learning-service
-          push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' && github.ref_type == 'tag' }}
   interface-service:
     name: Build interface service
     runs-on: ubuntu-20.04
@@ -40,7 +40,7 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - name: Login to image registry
         uses: docker/login-action@v2
-        if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request' && github.ref_type == 'tag'
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -51,7 +51,7 @@ jobs:
           context: ./src/
           file: ./src/interface_service/Dockerfile
           image: ${{ env.IMAGE_NAME_BASE }}/interface-service
-          push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' && github.ref_type == 'tag' }}
   frontend:
     name: Build frontend
     runs-on: ubuntu-20.04
@@ -60,7 +60,7 @@ jobs:
       - uses: docker/setup-buildx-action@v2
       - name: Login to image registry
         uses: docker/login-action@v2
-        if: github.event_name != 'pull_request'
+        if: github.event_name != 'pull_request' && github.ref_type == 'tag'
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -71,7 +71,7 @@ jobs:
           context: ./frontend
           file: ./frontend/Dockerfile
           image: ${{ env.IMAGE_NAME_BASE }}/frontend
-          push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' && github.ref_type == 'tag' }}
   helm:
     name: Package and publish Helm Chart
     runs-on: ubuntu-20.04
@@ -117,3 +117,12 @@ jobs:
       - run: mkdir .cr-index
       - name: Update Helm repository index
         run: cr index --push
+    outputs:
+      chart_version: ${{ steps.version.outputs.version }}
+  deploy:
+    if: github.event_name != 'pull_request' && github.ref_type == 'tag'
+    needs: [helm]
+    uses: ./.github/workflows/deploy.yml
+    secrets: inherit
+    with:
+      chart_version: ${{ needs.helm.outputs.version }}
