--- a/src/learning_service/configs/settings.yaml
+++ b/src/learning_service/configs/settings.yaml
@@ -10,10 +10,17 @@ development:
   BUCKET_NAME: stackoverflow-tagger
   MODEL_OBJECT_KEY: model.joblib
   MODEL_LOCAL_PATH: filename
-  PUBSUB_EMULATOR_HOST: localhost:8085
-  PUBSUB_PROJECT_ID: testlocal-123
+  CLASSIFIER_OBJECT_KEY: classifier.joblib
+  CLASSIFIER_LOCAL_PATH: filename
+  PREPROCESSOR_DATA_PATH: learning_service/output/preprocessor_data.joblib
+  PREPROCESSOR_DATA_OBJECT_KEY: preprocessor_data.joblib
+  PREPROCESSOR_LABELS_PATH: learning_service/output/preprocessor_labels.joblib
+  PREPROCESSOR_LABELS_OBJECT_KEY: preprocessor_labels.joblib
+  STATISTICS_OBJECT_KEY: statistics.json
+  # PUBSUB_EMULATOR_HOST: localhost:8085
+  PUBSUB_PROJECT_ID: buckettesting-352212
   PUBSUB_DATA_TOPIC_ID: new-data
   PUBSUB_MODEL_TOPIC_ID: new-model
   PUBSUB_SUBSCRIPTION_ID: learning-service-new-model
-  PUBSUB_DATA_TEMP_FILE: ./learning_service/incoming.tsv
+  PUBSUB_DATA_TEMP_FILE: ./learning_service/dataset/incoming.tsv
   LEARNING_MESSAGE_THRESHOLD: 10
