Save validation preprocessors to object storage

--- a/src/learning_service/configs/settings.yaml
+++ b/src/learning_service/configs/settings.yaml
@@ -16,7 +16,12 @@ development:
   PREPROCESSOR_DATA_OBJECT_KEY: preprocessor_data.joblib
   PREPROCESSOR_LABELS_PATH: learning_service/output/preprocessor_labels.joblib
   PREPROCESSOR_LABELS_OBJECT_KEY: preprocessor_labels.joblib
+  PREPROCESSOR_VAL_DATA_PATH: learning_service/output/preprocessor_val.joblib
+  PREPROCESSOR_VAL_DATA_OBJECT_KEY: preprocessor_val.joblib
+  PREPROCESSOR_VAL_LABELS_PATH: learning_service/output/preprocessor_val_labels.joblib
+  PREPROCESSOR_VAL_LABELS_OBJECT_KEY: preprocessor_val_labels.joblib
   STATISTICS_OBJECT_KEY: statistics.json
+  STATISTICS_PATH: learning_service/statistics.json
   PUBSUB_EMULATOR_HOST: localhost:8085
   PUBSUB_PROJECT_ID: testlocal-123
   PUBSUB_DATA_TOPIC_ID: new-data
