--- a/helm/stackoverflow-tagger/templates/learning-service/configmap.yaml
+++ b/helm/stackoverflow-tagger/templates/learning-service/configmap.yaml
@@ -10,6 +10,11 @@ data:
   REMLA_OUTPUT_DIR: "/app/output"
   REMLA_MODEL_LOCAL_PATH: "/app/output/model.joblib"
   REMLA_STATISTICS_OBJECT_KEY: "statistics.json"
+  REMLA_STATISTICS_PATH: "/app/output/statistics.json"
+  REMLA_PREPROCESSOR_VAL_DATA_PATH: "/app/output/preprocessor_val.joblib"
+  REMLA_PREPROCESSOR_VAL_DATA_OBJECT_KEY: "preprocessor_val.joblib"
+  REMLA_PREPROCESSOR_VAL_LABELS_PATH: "/app/output/preprocessor_val_labels.joblib"
+  REMLA_PREPROCESSOR_VAL_LABELS_OBJECT_KEY: "preprocessor_val_labels.joblib"
   REMLA_CLASSIFIER_OBJECT_KEY: "classifier.joblib"
   REMLA_CLASSIFIER_LOCAL_PATH: "/app/output/classifier.joblib"
   REMLA_PREPROCESSOR_DATA_PATH: "/app/output/preprocessor_data.joblib"
