Updated Helm Chart properties

--- a/helm/stackoverflow-tagger/templates/learning-service/configmap.yaml
+++ b/helm/stackoverflow-tagger/templates/learning-service/configmap.yaml
@@ -11,10 +11,10 @@ data:
   REMLA_MODEL_LOCAL_PATH: "/app/output/model.joblib"
   REMLA_STATISTICS_OBJECT_KEY: "statistics.json"
   REMLA_STATISTICS_PATH: "/app/output/statistics.json"
-  REMLA_PREPROCESSOR_VAL_DATA_PATH: "/app/output/preprocessor_val.joblib"
-  REMLA_PREPROCESSOR_VAL_DATA_OBJECT_KEY: "preprocessor_val.joblib"
-  REMLA_PREPROCESSOR_VAL_LABELS_PATH: "/app/output/preprocessor_val_labels.joblib"
-  REMLA_PREPROCESSOR_VAL_LABELS_OBJECT_KEY: "preprocessor_val_labels.joblib"
+  REMLA_PREPROCESSOR_VAL_DATA_PATH: "/app/output/val_preprocessed_data.joblib"
+  REMLA_PREPROCESSOR_VAL_DATA_OBJECT_KEY: "val_preprocessed_data.joblib"
+  REMLA_PREPROCESSOR_VAL_LABELS_PATH: "/app/output/val_preprocessed_labels.joblib"
+  REMLA_PREPROCESSOR_VAL_LABELS_OBJECT_KEY: "val_preprocessed_labels.joblib"
   REMLA_CLASSIFIER_OBJECT_KEY: "classifier.joblib"
   REMLA_CLASSIFIER_LOCAL_PATH: "/app/output/classifier.joblib"
   REMLA_PREPROCESSOR_DATA_PATH: "/app/output/preprocessor_data.joblib"
